[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/background/ritual_room.jpg" type="Texture" id=1]
[ext_resource path="res://assets/objetos/armario_aberto.png" type="Texture" id=2]
[ext_resource path="res://assets/objetos/papel.jpg" type="Texture" id=3]
[ext_resource path="res://assets/fontes/The Macabre.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/objetos/escudo-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://assets/objetos/espada-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://assets/objetos/1708_biblia-sagrada_z1_638035170303821612.png" type="Texture" id=7]
[ext_resource path="res://assets/objetos/sangue-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://assets/objetos/cruz-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://assets/objetos/vela-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://assets/objetos/vodu-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://Cenas/Curse.gd" type="Script" id=12]
[ext_resource path="res://sounds/scary-forest-90162.mp3" type="AudioStream" id=13]
[ext_resource path="res://Cenas/Angel.tscn" type="PackedScene" id=14]
[ext_resource path="res://Cenas/Dialogue2.tscn" type="PackedScene" id=15]
[ext_resource path="res://Cenas/Dialogue3.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/objetos/horror-png-9.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Curse" type="Node2D"]
script = ExtResource( 12 )

[node name="RitualRoom" type="Sprite" parent="."]
position = Vector2( 536.445, 309.125 )
scale = Vector2( 0.592824, 0.592824 )
texture = ExtResource( 1 )

[node name="armario_aberto" type="Sprite" parent="."]
position = Vector2( 190, 286 )
scale = Vector2( 2.235, 2.235 )
texture = ExtResource( 2 )

[node name="papel" type="Sprite" parent="."]
position = Vector2( 833, 192 )
scale = Vector2( 0.256215, 0.256185 )
texture = ExtResource( 3 )

[node name="oracao" type="RichTextLabel" parent="."]
margin_left = 740.0
margin_top = 50.0
margin_right = 935.0
margin_bottom = 323.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Em nome do pai do Filho e do Espírito Santo. Amém.

Anjo do mal, levantamos nosso escudo da fé contra ti e te resistimos com a espada do Espírito Santo, a palavra de Deus, que proclama o teu julgamento como falso deus, acusador e afligidor dos filhos do Altíssimo.

Anunciamos que estão destruídas as tuas obras em nossas vidas.

Pelo poder do sangue de Jesus Cristo , rejeitamos e quebramos todas as maldições e obras de feitiçaria enviadas para derrotar ou destruir nossas vidas.

Ordenamos a todos os poderes do mal que voltem imediatamente para o lugar de onde vieram.

Assim seja, em nome do Senhor nosso Deus, Jesus Cristo, Amém."

[node name="escudo" type="TextureButton" parent="."]
margin_left = 306.0
margin_top = 264.0
margin_right = 841.0
margin_bottom = 799.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 5 )

[node name="espada" type="TextureButton" parent="."]
margin_left = 198.0
margin_top = 240.0
margin_right = 775.0
margin_bottom = 672.0
rect_rotation = 33.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 6 )

[node name="biblia" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 409.0
margin_right = 1218.0
margin_bottom = 1609.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 7 )

[node name="sangue" type="TextureButton" parent="."]
margin_left = 237.0
margin_top = 160.0
margin_right = 796.0
margin_bottom = 607.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 8 )

[node name="cruz" type="TextureButton" parent="."]
margin_left = 149.0
margin_top = 264.0
margin_right = 622.0
margin_bottom = 924.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 9 )

[node name="vela" type="TextureButton" parent="."]
margin_left = 305.0
margin_top = 407.0
margin_right = 775.0
margin_bottom = 1057.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 10 )

[node name="vodu" type="TextureButton" parent="."]
margin_left = 159.0
margin_top = 415.0
margin_right = 519.0
margin_bottom = 736.0
rect_scale = Vector2( 0.16, 0.16 )
texture_normal = ExtResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 14 )]
position = Vector2( -338, -349 )
rotation = 0.328122

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 390.0
margin_top = 12.0
margin_right = 565.0
margin_bottom = 68.0

[node name="Continuar" type="TextureButton" parent="."]
margin_left = 893.0
margin_top = 499.0
margin_right = 1213.0
margin_bottom = 840.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 17 )

[node name="Dialogue2" parent="." instance=ExtResource( 15 )]

[node name="Dialogue3" parent="." instance=ExtResource( 16 )]

[connection signal="pressed" from="escudo" to="." method="_on_escudo_pressed"]
[connection signal="pressed" from="espada" to="." method="_on_espada_pressed"]
[connection signal="pressed" from="biblia" to="." method="_on_biblia_pressed"]
[connection signal="pressed" from="sangue" to="." method="_on_sangue_pressed"]
[connection signal="pressed" from="cruz" to="." method="_on_cruz_pressed"]
[connection signal="pressed" from="vela" to="." method="_on_vela_pressed"]
[connection signal="pressed" from="vodu" to="." method="_on_vodu_pressed"]
[connection signal="ready" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_ready"]
[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]
